tools/fleet/fixtures/packets/invalid/deferred-lane-launch.case
source=valid-work.packet
mutation=set Lane-State to DEFERRED_NOT_PROVISIONED while retaining Launch-Command
expected=invalid
